@@ -881,6 +881,16 @@
 	<td>&lt;md5crypted/&gt;</td>
       </tr>
       <tr>
+	<td></td><td>apachemd5crypted</td>
+	<td>
+	  <p>The <b>apachemd5crypted</b> element is an optional, empty
+	  element.  If this element is present, the Ganymede server
+	  will store the contents of this password in Apache-style
+	  md5crypt() format.</p>
+	</td>
+	<td>&lt;apachemd5crypted/&gt;</td>
+      </tr>
+      <tr>
 	<td></td><td>winHashed</td>
 	<td>
 	  <p>The <b>winHashed</b> element is an optional, empty
@@ -898,14 +908,15 @@
 	  element.  If this element is present, the Ganymede server
 	  will store the plaintext of passwords stored in this field
 	  to disk.  Normally, if the Ganymede server has either
-	  <b>crypted</b>, <b>md5crypted</b>, or <b>winHashed</b> set,
-	  the server will never dump the plaintext of passwords in
-	  this field to disk, as it is capable of authenticating
-	  logins against any of the supported hash formats.  If
-	  the <b>plaintext</b> element is present, the password will
-	  be preserved in plaintext form in the ganymede.db file,
-	  regardless of whether or not the password is also handled
-	  via one of the encryption hashes.</p>
+	  <b>crypted</b>, <b>md5crypted</b>, <b>apachemd5crypted</b>,
+	  or <b>winHashed</b> set, the server will never dump the
+	  plaintext of passwords in this field to disk, as it is
+	  capable of authenticating logins against any of the
+	  supported hash formats.  If the <b>plaintext</b> element is
+	  present, the password will be preserved in plaintext form in
+	  the ganymede.db file, regardless of whether or not the
+	  password is also handled via one of the encryption
+	  hashes.</p>
 	</td>
 	<td>&lt;plaintext/&gt;</td>
       </tr>
@@ -1746,8 +1757,9 @@ The <b>&lt;password&gt;</b> element contains a Java password value.
 As password fields are scalar in Ganymede, only one
 <b>&lt;password&gt;</b> element at a time may be contained in a field
 element.  The <b>&lt;password&gt;</b> element must be empty.  The
-<b>&lt;password&gt;</b> element may contain any or all of the five
+<b>&lt;password&gt;</b> element may contain any or all of the six
 optional attributes, <b>plaintext</b>, <b>crypt</b>, <b>md5crypt</b>,
+<b>apachemd5crypt</b>,
 <b>lanman</b> and <b>ntmd4</b>.  If the <b>plaintext</b> attribute is
 present, all other hashes will be ignored, and the Ganymede server
 will generate new hashes as needed from the plaintext given. If none of the optional
@@ -1798,6 +1810,13 @@ in FreeBSD-style md5Crypt() format.  The client will transmit this
 password to the server, and will clear any pre-existing plain text
 information stored in this field in the server.</dd>
 
+<dt><b>apachemd5crypt</b></dt>
+
+<dd>This attribute, if present, contains a password string pre-hashed
+in Apache-style md5Crypt() format.  The client will transmit this
+password to the server, and will clear any pre-existing plain text
+information stored in this field in the server.</dd>
+
 <dt><b>lanman</b></dt>
 
 <dd>This attribute, if present, contains a password string pre-hashed
@@ -1824,7 +1843,7 @@ information stored in this field in the server.</dd>
 <td COLSPAN="2" BGCOLOR="#FFFFCC"><b>Example</b></td>
 </tr>
 
-<tr><td COLSPAN="2">&lt;password crypt="nxGots4NO.BJY" md5crypt="$1$apr1$f398vnq51gnzf"/&gt;</td></tr>
+<tr><td COLSPAN="2">&lt;password crypt="nxGots4NO.BJY" md5crypt="$1$o8/.....$f398vnq51gnzf"/&gt;</td></tr>
 
 </table></center>
 
